# px4_sitl_on_aws

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: devcontainer.json  post_create.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: auto-assign.yml  build.yml  ci.yml  data.yml  jazzy.yml  label.yml  release.yml  rolling.yml  run.yml  sitl.yml  sitl_runson.yml  update-wiki.yml  version-and-tag.yml
data/: topic_report_2025-04-20_19-46-38.md  topic_report_2025-04-22_19-36-46.md  topic_report_2025-04-22_19-48-38.md  topic_report_2025-04-22_20-18-50.md  topic_report_2025-04-23_07-18-40.md  topic_report_2025-04-23_07-49-18.md  topic_report_2025-04-23_20-24-26.md
dockers/: Dockerfile.dev  Dockerfile.simulation
docs/: AWS Setup.md  Install.md  aws_setup.md  px4_state_machine.md
results/: 2025-04-24_20-16-16_report.md  2025-04-26_06-54-57_report.md  2025-04-26_10-48-23_report.md  data_report.md
scripts/: bag_analysis.py  build.sh  build_dev.sh  build_sim.sh  report_multi.py  report_single.py  simulation.sh  update_nav_dll_act.py  utils.py
src/px4-external-module/: CMakeLists.txt  package.xml
src/px4-external-module/launch/: ci.launch.py
src/px4_ci_aws/: CMakeLists.txt  package.xml
src/px4_ci_aws/launch/: ci.launch.py
src/px4_ci_aws/src/: px4_arm_and_offboard.py  px4_state_machine.py
